# ONNX_Inference_Samples

./: .gitignore
MNIST/Linux/: CMakeLists.txt  MNIST.cpp
